--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,6 +1,16 @@
-.header{
-    padding: 5px;
+.header {
     display: flex;
-    justify-content: center;
-    background-color: aqua;
+    padding: 8px;
+    justify-content: center; /* Centers items horizontally */
+    align-items: flex-start; /* Aligns items to the top of the container */
+    font-family: 'Courier New', cursive; 
+    font-size: 2em; /* Adjusted for consistency */
+    background-color: rgba(251, 255, 255, 0.681);
+    margin-top: 10px;
+}
+
+.header img {
+    /* Remove float and use margin-top to align the icon vertically */
+    margin-top: 0px; /* Adjust as needed to align with the logo */
+    margin-right: 10px; /* Adds some space between the icon and the next element */
 }
