--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,23 +1,18 @@
-
 .header {
-    display: flex;
-    padding: 8px;
-    justify-content: center; /* Centers items horizontally */
-    align-items: space-between; /* Aligns items to the top of the container */
-    font-family: 'Courier New', cursive; 
-    font-size: 2em; /* Adjusted for consistency */
-    background-color: rgba(251, 255, 255, 0.681);
-    margin-top: 10px;
-    
+  display: flex;
+  padding: 8px;
+  justify-content: center;
+  align-items: space-between;
+  font-family: "Courier New", cursive;
+  font-size: 2em;
+  background-color: rgba(251, 255, 255, 0.681);
+  margin-top: 10px;
 }
-.header div{
-    width: 33%;
+.header div {
+  width: 33%;
 }
-
-
 
 .header img {
-    /* Remove float and use margin-top to align the icon vertically */
-    margin-top: 0px; /* Adjust as needed to align with the logo */
-    margin-right: 10px; /* Adds some space between the icon and the next element */
+  margin-top: 0px;
+  margin-right: 10px;
 }
