--- a/frontend/src/Components/GameCard/GameCard.css
+++ b/frontend/src/Components/GameCard/GameCard.css
@@ -1,13 +1,16 @@
 .gameCard{
   box-shadow: 2px 2px 20px 5px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  /* border: 0.5px solid rgb(172, 172, 172); */
   width: 200px;
-  height: 310px;
+  height: 290px;
   margin: 20px;
   padding: 10px;
   font-size: 0.75em;
   border-radius: 15px;
+  line-height: 0.5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .gameCard:hover{
@@ -21,25 +24,33 @@
 }
 
 .title {
-  cursor: pointer;
   font-weight: 700;
   font-size: 1.75em;
   color: black;
   text-decoration: none;
 }
 
-.category {
+.cardCategories{
   color: black;
+  line-height: 1;
+  font-weight: 400;
+  padding-bottom: 10px;
 }
 
 .rating {
   color: black;
 }
 
-.description {
+.cardDescription {
   color: black;
+  overflow-wrap: break-word;
+  word-break: break-all;
+  line-height: 1;
+  font-size: small;
+  font-weight: 200;
 }
 
-.img{
-  width: 150px;
+.imgCard{
+  width: 170px;
+  margin: auto;
 }
