--- a/frontend/src/Components/ListView/ListView.css
+++ b/frontend/src/Components/ListView/ListView.css
@@ -1,6 +1,7 @@
 .listView {
   background-color: rgb(225, 247, 255);
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   margin-left: calc(23% + 16px);
@@ -8,13 +9,7 @@
   padding: 8px;
   border: 1.25px solid rgb(146, 143, 143);
   border-radius: 10px;
-  font-family: Georgia, "Times New Roman", Times, serif;
   font-size: large;
   font-weight: 800;
   color: rgb(62, 94, 107);
-}
-
-.addGame {
-  cursor: pointer; /* Indicates it's clickable */
-  font-family: "Times New Roman";
 }
