--- a/frontend/src/Components/Sidebar/Sidebar.css
+++ b/frontend/src/Components/Sidebar/Sidebar.css
@@ -7,8 +7,7 @@
   border: 1.25px solid rgb(111, 110, 110);
   border-radius: 10px;
   margin-left: 1.5%;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: large;
+  font-size: x-large;
   font-weight: 800;
   color: white;
   display: flex;
@@ -16,8 +15,8 @@
 }
 
 .sidebarSubSection {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: medium;
+  font-size: large;
   font-weight: 600;
   color: rgb(225, 247, 255);
+  cursor: pointer;
 }
