--- a/frontend/src/Components/Sidebar/Sidebar.css
+++ b/frontend/src/Components/Sidebar/Sidebar.css
@@ -1,8 +1,8 @@
 .sidebar {
   height: 100%;
   width: 20%;
+  min-height: 600px;
   padding: 8px;
-  position: fixed;
   background-color: rgb(111, 171, 194);
   border: 1.25px solid rgb(111, 110, 110);
   border-radius: 10px;
