Resolve "Create a search field on the homepage"

--- a/frontend/src/Components/ListView/ListView.css
+++ b/frontend/src/Components/ListView/ListView.css
@@ -1,5 +1,6 @@
 .listView {
   background-color: rgb(225, 247, 255);
+  min-height: 22rem;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
