--- a/frontend/src/Components/Sidebar/Sidebar.css
+++ b/frontend/src/Components/Sidebar/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
-  height: 100%;
+  height: 80vh;
   width: 20%;
-  min-height: 730px;
+  min-height: 600px;
   padding: 8px;
   background-color: rgb(111, 171, 194);
   border: 1.25px solid rgb(111, 110, 110);
@@ -19,4 +19,8 @@
   font-weight: 600;
   color: rgb(225, 247, 255);
   cursor: pointer;
+}
+
+.sidebarSubSection:hover {
+  color: rgb(255, 255, 255);
 }
