--- a/frontend/src/Components/GameCard/GameCard.css
+++ b/frontend/src/Components/GameCard/GameCard.css
@@ -1,8 +1,10 @@
 .gameCard{
   box-shadow: 2px 2px 20px 5px rgba(0, 0, 0, 0.15);
-  width: 200px;
-  height: 290px;
+  width: 205px;
+  height: 360px;
   margin: 20px;
+  margin-left: 25px;
+  margin-right: 25px;
   padding: 10px;
   font-size: 0.75em;
   border-radius: 15px;
@@ -11,6 +13,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  background-color: rgb(225, 247, 255);
 }
 
 .gameCard:hover{
@@ -28,6 +31,9 @@
   font-size: 1.75em;
   color: black;
   text-decoration: none;
+  line-height: 1;
+  text-align: center;
+  margin-bottom: 0px;
 }
 
 .cardCategories{
@@ -35,22 +41,26 @@
   line-height: 1;
   font-weight: 400;
   padding-bottom: 10px;
+  text-align: center;
 }
 
 .rating {
   color: black;
+  font-weight: 700;
+  text-align: center;
 }
 
 .cardDescription {
   color: black;
   overflow-wrap: break-word;
-  word-break: break-all;
+  word-break: normal;
   line-height: 1;
   font-size: small;
   font-weight: 200;
+  text-align: center;
 }
 
 .imgCard{
-  width: 170px;
+  width: 135px;
   margin: auto;
 }
