--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   padding: 8px;
+  padding-bottom: 2px;
   justify-content: center;
   align-items: space-between;
   font-size: 2em;
@@ -13,7 +14,7 @@
   width: 33%;
 }
 
-.logImg{
+.logImg {
   margin-top: 0px;
   margin-right: 30px;
 }
