--- a/frontend/src/Components/GameDetails/GameDetails.css
+++ b/frontend/src/Components/GameDetails/GameDetails.css
@@ -50,3 +50,16 @@
   font-weight: 700;
   text-align: left;
 }
+
+.categories {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 0.1rem;
+}
+
+.category {
+  border-radius: 99999px;
+  padding: 0.2rem 0.5rem;
+  background-color: rgb(145, 193, 193);
+}
