--- a/frontend/src/Components/GameDetails/GameDetails.css
+++ b/frontend/src/Components/GameDetails/GameDetails.css
@@ -17,7 +17,7 @@
 }
 
 .detailsHeader {
-  width: 670px;
+  width: 70%;
   border: solid rgb(180, 209, 220) 2px;
   padding: 15px;
   border-radius: 40px;
@@ -62,4 +62,11 @@
   border-radius: 99999px;
   padding: 0.2rem 0.5rem;
   background-color: rgb(145, 193, 193);
+}
+
+
+.topRow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
