--- a/frontend/src/Components/GameDetails/GameDetails.css
+++ b/frontend/src/Components/GameDetails/GameDetails.css
@@ -44,8 +44,14 @@
 
 .commentsContainer {
   margin-left: 10px;
+  flex-grow: 1;
 }
 
+.commentsTimerContainer {
+  display: flex;
+  align-items: flex-start;
+  
+}
 .avgrating {
   font-weight: 700;
   text-align: left;
@@ -70,3 +76,4 @@
   justify-content: space-between;
   align-items: center;
 }
+
