Resolve "Moderator delete button on game cards and ratings"

--- a/frontend/src/Components/GameCard/GameCard.css
+++ b/frontend/src/Components/GameCard/GameCard.css
@@ -68,6 +68,11 @@
   margin: auto;
 }
 
-.favoriteButton {
+.gameCardButtonPanel {
+  display: flex;
+  justify-content: space-between;
+  align-items: right;
+  gap: 6px;
   margin-left: auto;
 }
+
