--- a/frontend/src/Components/RatingDetail/RatingDetail.css
+++ b/frontend/src/Components/RatingDetail/RatingDetail.css
@@ -42,3 +42,10 @@
   align-items: center;
   padding: 0px;
 }
+
+.commentBottomRow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px;
+}
