--- a/frontend/src/Components/ListView/ListView.css
+++ b/frontend/src/Components/ListView/ListView.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   margin-left: 2%;
   margin-right: 2%;
   margin-bottom: 1%;
