--- a/frontend/src/Components/UserDetails/UserDetails.css
+++ b/frontend/src/Components/UserDetails/UserDetails.css
@@ -29,16 +29,18 @@
   padding-left: 5%;
   padding-right: 5%;
   padding-top: 1%;
+  height: 75vh;
 }
 
 .list-view {
   background-color: rgb(225, 247, 255);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 48%;
-  /* width: 87%; */
-  height: 55vh;
+  width: (50% - 20px);
+  height: 75vh;
   overflow: auto;
+  flex: 1;
+  margin: 10px;
 }
 
 .list-view p {
