Resolve "Submission form for report functionality"

--- a/frontend/src/Components/LoginModal/LoginModal.css
+++ b/frontend/src/Components/LoginModal/LoginModal.css
@@ -76,6 +76,7 @@ p {
   color: rgb(111, 171, 194);
 }
 .signupButton:hover{
+  cursor: pointer;
   color: rgb(69, 156, 190);
   text-decoration: underline;
 }
