--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -3,18 +3,35 @@
   padding: 8px;
   padding-bottom: 2px;
   justify-content: center;
-  align-items: space-between;
+  align-items: center; 
   font-size: 2em;
   background-color: rgba(251, 255, 255, 0.681);
   margin-top: 10px;
   width: 100%;
   height: 10%;
 }
+
 .header div {
-  width: 33%;
+  width: 33%; 
+}
+
+.header .adSpace {
+  width: 20%; 
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  text-align: center;
+  padding: 8px;
+  font-size: 0.6em; 
+  background-color: lightgray; 
+  border: 2px solid black; 
+
 }
 
 .logImg {
   margin-top: 0px;
   margin-right: 30px;
+  cursor: pointer; 
 }
+
+
