--- a/frontend/src/Components/SearchBar/DarkSearchBar.css
+++ b/frontend/src/Components/SearchBar/DarkSearchBar.css
@@ -1,9 +1,9 @@
-.searchbar {
-    background-color: rgb(129, 193, 215);
+.searchbar.dark {
+    background-color: rgb(34, 78, 135);
     border: none;
     border-radius: 9999px;
     font-size: 20px;
-    color: rgb(215, 234, 234);
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     outline: 2px solid transparent;
