--- a/frontend/src/Components/ListView/ListView.css
+++ b/frontend/src/Components/ListView/ListView.css
@@ -12,6 +12,8 @@
   font-weight: 800;
   color: rgb(62, 94, 107);
   width: 90%;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .listViewUserPage {
