--- a/frontend/src/Pages/HomePage/DarkHomePage.css
+++ b/frontend/src/Pages/HomePage/DarkHomePage.css
@@ -4,6 +4,7 @@
 
 .mainBody.dark {
   width: 100vw;
+  min-height: calc(100vh - 116px);
   background-color: black;
   display: flex;
   flex-direction: row;
