--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -1,37 +1,47 @@
 .header {
   display: flex;
+  justify-content: space-between;
   padding: 8px;
   padding-bottom: 2px;
   justify-content: center;
   align-items: center; 
   font-size: 2em;
   background-color: rgba(251, 255, 255, 0.681);
-  margin-top: 10px;
   width: 100%;
-  height: 10%;
+  height: 116px;
 }
 
 .header div {
   width: 33%; 
 }
 
-.header .adSpace {
-  width: 20%; 
+.adSpace,
+.logo,
+.controls {
   display: flex;
-  justify-content: left;
+  align-items: center;
+}
+
+.logo {
+  justify-content: center;
+}
+
+.controls {
+  justify-content: flex-end;
+  gap: 20px;
+  padding-right: 30px;
+}
+
+.header .adSpace {
+  width: 70%;
+  height: 80px;
+  display: flex;
+  justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 8px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-size: 0.6em; 
   background-color: lightgray; 
   border: 2px solid black; 
-
 }
-
-.logImg {
-  margin-top: 0px;
-  margin-right: 30px;
-  cursor: pointer; 
-}
-
-
