--- a/frontend/src/Components/UserDetails/DarkUserDetails.css
+++ b/frontend/src/Components/UserDetails/DarkUserDetails.css
@@ -29,6 +29,7 @@
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 1%;
+    align-items: start;
   }
   
   .list-view {
@@ -36,7 +37,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
     width: 48%;
-    height: 55vh;
+    height: 65vh;
     overflow: auto;
   }
   
