--- a/frontend/src/Components/ListView/ListView.css
+++ b/frontend/src/Components/ListView/ListView.css
@@ -1,6 +1,9 @@
 .listView {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(250px, 1fr)
+  );
   grid-gap: 16px;
   align-items: start;
   padding: 8px;
@@ -25,8 +28,6 @@
   margin-right: 2%;
   margin-bottom: 1%;
   padding: 8px;
-  /* border: 1.25px solid rgb(146, 143, 143);
-  border-radius: 10px; */
   font-size: large;
   font-weight: 800;
   color: rgb(62, 94, 107);
@@ -34,6 +35,38 @@
   height: 10%;
 }
 
-.categoryCheck{
+.categoryCheck {
   width: 14px;
 }
+
+.haveNotWheel {
+  display: none;
+}
+
+.wheelModalButton {
+  position: relative;
+  width: 160px;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  justify-content: center;
+  box-shadow: 2px 2px 15px 5px rgba(0, 0, 0, 0.15);
+  background-color: rgb(164, 202, 216);
+  margin-top: 15px;
+  text-align: center;
+}
+
+.wheelModalButton:hover {
+  box-shadow: 2px 2px 10px 5px rgba(0, 0, 0, 0.2);
+}
+
+.topPart {
+  display: flex;
+  flex-direction: row;
+}
+
+.listViewTitle {
+  margin-left: 10px;
+  flex-basis: 50%;
+}
+
