--- a/frontend/src/Components/Navbar/DarkNavbar.css
+++ b/frontend/src/Components/Navbar/DarkNavbar.css
@@ -3,6 +3,7 @@
   color: #343131;
 }
 
-.header .adSpace {
-  background-color: rgb(171, 169, 169);
+.adSpace.dark {
+  background-color: rgb(124, 123, 123);
+  color: white;
 }
