--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -42,6 +42,10 @@
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: 0.6em; 
+}
+
+.adSpace {
   background-color: lightgray; 
-  border: 2px solid black; 
+  border: 2px solid rgb(180, 179, 179); 
+  border-radius: 10px;
 }
